# docling-weaviate

./: 1-extraction.py  2-chunking.py  3-embedding.py  4-search.py  5-chat.py  constants.py  pyproject.toml
utils/: connection.py  embeddings.py  sitemap.py  tokenizer.py
