[project]
name = "smol-docling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.31.0",
    "openai>=1.78.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
    "weaviate-client>=4.14.1",
]
